--- a/app/views/networks/new.html.erb
+++ b/app/views/networks/new.html.erb
@@ -9,12 +9,12 @@
     <%= text_field_tag :name %>
   </div>
 
-    <div>
-    <%= label_tag :caption %><br />
-    <%= text_field_tag :caption %>
+  <div>
+    <%= label_tag :password %><br />
+    <%= text_field_tag :password %>
   </div>
 
-  
+
   <div>
     <%= submit_tag "Create Network" %>
   </div>
