--- a/app/views/networks/edit.html.erb
+++ b/app/views/networks/edit.html.erb
@@ -9,11 +9,11 @@
   </div>
 
   <div>
-    <%= label_tag :caption %><br />
-    <%= text_field_tag :caption, @network.caption %>
+    <%= label_tag :password %><br />
+    <%= text_field_tag :password, @network.password %>
   </div>
 
-  
+
   <div>
     <%= submit_tag "Update Network" %>
   </div>
