--- a/app/views/networks/show.html.erb
+++ b/app/views/networks/show.html.erb
@@ -1,13 +1,10 @@
-<h1>Network #<%= @network.id %></h1>
-
+<h1><%= @network.name %></h1>
+        <%= link_to "Groups", groups_url %> |
+        <%= link_to "Users", profiles_url %> |
+        <%= link_to "Posts", posts_url %> |
 <p>
-  <b>Name:</b>
-  <%= @network.name %>
-</p>
+  <b>Feed:</b>
 
-<p>
-  <b>Caption:</b>
-  <%= @network.caption %>
 </p>
 
 
