--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= link_to 'Add a New Event', new_event_url %></p>
 
-<table>
+<table class="table table-hover table-bordered">
   <thead>
     <tr>
       <th>Title</th>
@@ -13,9 +13,6 @@
       <th>Timestamp</th>
       <th>User</th>
       <th>Group</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
@@ -30,7 +27,7 @@
       <td><%= event.timestamp %></td>
       <td><%= event.user_id %></td>
       <td><%= event.group_id %></td>
-  
+
       <td><%= link_to 'Show', event_url(event) %></td>
       <td><%= link_to 'Edit', edit_event_url(event) %></td>
       <td><%= link_to 'Destroy', event_url(event), method: 'delete', data: { confirm: "Do you really want to delete this event?" } %></td>
