--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= link_to 'Add a New Idea', new_idea_url %></p>
 
-<table>
+<table class="table table-hover  table-bordered">
   <thead>
     <tr>
       <th>Name</th>
@@ -10,9 +10,6 @@
       <th>Timestamp</th>
       <th>User</th>
       <th>Group</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
@@ -24,7 +21,7 @@
       <td><%= idea.timestamp %></td>
       <td><%= idea.user_id %></td>
       <td><%= idea.group_id %></td>
-  
+
       <td><%= link_to 'Show', idea_url(idea) %></td>
       <td><%= link_to 'Edit', edit_idea_url(idea) %></td>
       <td><%= link_to 'Destroy', idea_url(idea), method: 'delete', data: { confirm: "Do you really want to delete this idea?" } %></td>
