--- a/app/views/networks/show.html.erb
+++ b/app/views/networks/show.html.erb
@@ -1,10 +1,26 @@
 <h1><%= @network.name %></h1>
-        <%= link_to "Groups", groups_url %> |
-        <%= link_to "Users", profiles_url %> |
-        <%= link_to "Posts", posts_url %> |
-<p>
-  <b>Feed:</b>
+        <%= link_to "+Group", new_group_url, class: "btn btn-success" %>
+        <%= link_to "+Post", new_post_url, class: "btn btn-success"  %>
 
-</p>
+<div class="clearfix:after">
+  <div class="container_med left">
+    <h4>Feed:</h4>
 
+  </div>
+
+
+  <div class="sidebar right">
+    <h4>Users:</h4>
+    <% @network.profiles.each do |x| %>
+    <%= x.name %><br>
+    <% end %>
+  </div>
+  <div class="sidebar right">
+    <h4>Groups:</h4>
+    <% @network.groups.each do |x| %>
+    <%= x.name %>
+    <% end %>
+  </div>
+
+</div>
 
