--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
-<h1>  <%= @profile.name %></h1>
-
+<h1>  <%= @profile.name %>'s Profile:</h1>
+<div class="container_med">
 
 
 <p>
@@ -23,6 +23,14 @@
 </p>
 
 
+<p>
+  <b>Network: </b>
+  <%= current_user.network_id%>
+</p>
+
+
 <%= link_to 'Edit', edit_profile_url(@profile.user_id) %>
 <%= link_to 'Destroy', profile_url(@profile.user_id), method: 'delete', data: { confirm: "Do you really want to delete this profile?" } %><br>
 <%= link_to "Ideas", ideas_url %>
+
+</div>
