cut down tables for mvp

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,18 +14,12 @@
     <%= notice %>
     <nav>
       <%= link_to "Home", home_url %> |
-        <% if session[:network_id] %>
-          <%= link_to 'news feed', network_url(session[:network_id]) %> |
-          <% else  %>
-          <%= link_to "Networks", networks_url %> |
-          <% end  %>
       <% if user_signed_in? %>
-        <% if Profile.find_by_user_id(current_user.id)%>
-          <%= link_to "my profile", profile_url(current_user.id) %> |
-        <% else %>
-         <%= link_to "+Profile", new_profile_url, class: "btn btn-s" %>
-        <% end %>
+      <%= link_to "Profile", profile_url(current_user.id) %> |
+      <%= link_to "Feed", posts_url %> |
+
       <% end %>
+
    </nav>
    <form class="navbar-form pull-right">
                  <% if user_signed_in? %>
