--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,24 +1,60 @@
-<h1>Feeds</h1>
+<h1>Feed</h1>
         <%= link_to "+Group", new_group_url, class: "btn btn-success" %>
         <%= link_to "+Post", new_post_url, class: "btn btn-success"  %>
 
 <div class="clearfix:after">
   <div class="container_med left">
     <h4>Feed:</h4>
+
   </div>
+
 
   <div class="sidebar right">
     <h4>Users:</h4>
-    <% User.all.each do |x| %>
-    <%= x.email %><br>
-    <% end %>
+    <% current_user.profile.name %>
   </div>
   <div class="sidebar right">
     <h4>Groups:</h4>
-    <% Group.all.each do |x| %>
+    <% current_user.groups.each do |x| %>
     <%= x.name %>
     <% end %>
   </div>
 
 </div>
+
+
+
+
+<h1>Posts</h1>
+
+<p><%= link_to 'Add a New Post', new_post_url %></p>
+
+<table class="table table-hover table-bordered">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Caption</th>
+      <th>Timestamp</th>
+      <th>User</th>
+      <th>Group</th>
+    </tr>
+  </thead>
+
+  <tbody>
+  <% @posts.each do |post| %>
+    <tr>
+      <td><%= post.title %></td>
+      <td><%= post.caption %></td>
+      <td><%= post.timestamp %></td>
+      <td><%= post.user_id %></td>
+      <td><%= post.group_id %></td>
+
+      <td><%= link_to 'Show', post_url(post) %></td>
+      <td><%= link_to 'Edit', edit_post_url(post) %></td>
+      <td><%= link_to 'Destroy', post_url(post), method: 'delete', data: { confirm: "Do you really want to delete this post?" } %></td>
+
+    </tr>
+  <% end %>
+  </tbody>
+</table>
 
