--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,16 @@
     <%= notice %>
     <nav>
       <%= link_to "Home", home_url %> |
+        <% if user_signed_in? %>
+          <%= link_to 'news feed', posts_url %> |
+          <% end  %>
       <% if user_signed_in? %>
-      <%= link_to "Profile", profile_url(current_user.id) %> |
-      <%= link_to "Feed", posts_url %> |
-
+        <% if Profile.find_by_user_id(current_user.id)%>
+          <%= link_to "my profile", profile_url(current_user.id) %> |
+        <% else %>
+         <%= link_to "+Profile", new_profile_url, class: "btn btn-s" %>
+        <% end %>
       <% end %>
-
    </nav>
    <form class="navbar-form pull-right">
                  <% if user_signed_in? %>
