--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,10 @@
     <%= notice %>
     <nav>
       <%= link_to "Home", home_url %> |
-        <% if user_signed_in? %>
-          <%= link_to 'news feed', posts_url %> |
+        <% if session[:network_id] %>
+          <%= link_to 'news feed', network_url(session[:network_id]) %> |
+          <% else  %>
+          <%= link_to "Networks", networks_url %> |
           <% end  %>
       <% if user_signed_in? %>
         <% if Profile.find_by_user_id(current_user.id)%>
