--- a/app/views/networks/new.html.erb
+++ b/app/views/networks/new.html.erb
@@ -7,15 +7,6 @@
   <div>
     <%= label_tag :name %><br />
     <%= text_field_tag :name %>
-  </div>
-
-  <div>
-    <%= label_tag :password %><br />
-    <%= text_field_tag :password %>
-  </div>
-
-
-  <div>
-    <%= submit_tag "Create Network" %>
+    <%= submit_tag "Create Network" , class: "btn btn-small " %>
   </div>
 <% end %>
