--- a/app/views/networks/show.html.erb
+++ b/app/views/networks/show.html.erb
@@ -6,8 +6,23 @@
   <div class="container_med left">
     <h4>Feed:</h4>
 
-  </div>
 
+  <% @posts.each do |post| %>
+  <div class="posts">
+      <h5><%= post.title %><li>
+      <p><%= post.caption %></p>
+      <p><%= post.timestamp.to_date %>
+      <% p=Profile.find_by_user_id(post.user_id) %>
+      <% if p  %>
+        <%= p.name %></p>
+      <% end %>
+        <p><%= post.group_id %></p>
+        <%= link_to 'Edit', edit_post_url(post) %>
+        <%= link_to 'Destroy', post_url(post), method: 'delete', data: { confirm: "Do you really want to delete this post?" } %>
+  </div><br>
+  <% end %>
+
+  </div>
 
   <div class="sidebar right">
     <h4>Users:</h4>
@@ -15,7 +30,7 @@
     <%= x.name %><br>
     <% end %>
   </div>
-  <div class="sidebar right">
+  <div class="sidebar left">
     <h4>Groups:</h4>
     <% @network.groups.each do |x| %>
     <%= x.name %>
