--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,8 @@
           <% end %>
       <% if user_signed_in? %>
         <%= link_to "users", profiles_url %> |
-        <% if Profile.find_by_user_id(current_user.id)%>
-          <%= link_to "my profile", profile_url(current_user.id) %> |
-        <% else %>
-         <%= link_to "+Profile", new_profile_url, class: "btn btn-s" %> |
-        <% end %>
-      <% end %>
+          <%= link_to "my profile", new_profile_url, class: "btn btn-s" %> |
+       <% end %>
    </nav>
    <form class="navbar-form pull-right">
                  <% if user_signed_in? %>
