--- a/app/views/networks/index.html.erb
+++ b/app/views/networks/index.html.erb
@@ -1,22 +1,9 @@
 
-  <ul>
-  <% @networks.each do |network| %>
-      <%= link_to network.name, network_url(network.id), class: "btn btn-large btn-success" %></li>
-  <% end %>
-  </ul>
 <div class="container">
 <ul><br><br>
-<lh>Needs:</lh>
-<li>Addresses the need to rapid prototype the ideas not fortunate enough to be the top twenty ideas pursued for Starternight.</li>
-<li>Allows for students to maintain the starter league network to stay active and productive in the startup community beyond the scope of the course.  </li>
-<li>Facilitates meetups for paired or group programming</li>
-<lh>User Stories:</lh>
-<li>Users can post requests as well as leave comments to post</li>
-<li>Users can be in multiple groups (starter night groups will be starred)</li>
-<li>Users can create an event open to group or network</li>
-<li>Users can create groups and networks</li>
-</ul>
-</div>
+<h1><lh>Welcome to the Starter Shipper!</lh></h1>
+<li>Please Sign in Above</li>
+
 
 
 
