--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -19,18 +19,11 @@
 
 <p>
   <b>Email Address: </b>
-  <%= current_user.email%>
+  <%= User.find_by_id(@profile.user_id).email%>
 </p>
-
-
-<p>
-  <b>Network: </b>
-  <%= current_user.network_id%>
-</p>
-
 
 <%= link_to 'Edit', edit_profile_url(@profile.user_id) %>
 <%= link_to 'Destroy', profile_url(@profile.user_id), method: 'delete', data: { confirm: "Do you really want to delete this profile?" } %><br>
 <%= link_to "Ideas", ideas_url %>
 
-</div>
+</div>0
