--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,12 @@ ul, li{
   color: grey;
 }
 
-
+.notice{
+  text-align: center;
+  color: red;
+  font-weight: bolder;
+  font-size: 2em;
+}
 
 .clearfix:after {
   content: ".";
